db/layer partially done
